--- a/src/main/webapp/menubar.xhtml
+++ b/src/main/webapp/menubar.xhtml
@@ -28,9 +28,9 @@ Email: info@dpbennett.com.jm
 
         <p:menuitem 
             actionListener="#{systemManager.mainTabView.openTab('System Administration')}" 
-            title="System administration" 
+            title="Show system administration options" 
             rendered="#{systemManager.user.hasModule('systemManager')}"
-            value="System" 
+            value="Options" 
             icon="pi pi-database" />  
 
         <ui:remove>
