--- a/src/main/webapp/label/labelDialog.xhtml
+++ b/src/main/webapp/label/labelDialog.xhtml
@@ -38,17 +38,22 @@ Email: info@dpbennett.com.jm
 
             <p:growl id="label_growl" life="5000" showDetail="true"/>
 
-            <p:toolbar>
+            <p:toolbar id="topToolbar">
                 <p:toolbarGroup align="left">
-                    <p:commandButton value="Ok"
-                                     actionListener="#{energyLabelManager.okLabel}"
-                                     update="label_growl"  
+
+                    <p:commandButton value="Save"
+                                     actionListener="#{energyLabelManager.saveEnergyLabel}"
+                                     update=":labelForm"  
+                                     process="@form"
                                      icon="pi pi-check"/>
                     <p:spacer width="10"/>
-                    <p:commandButton value="Cancel"
-                                     immediate="true" 
+                    <p:commandButton value="Close"
+                                     immediate="true"                                      
                                      actionListener="#{energyLabelManager.cancelLabelEdit}"
                                      icon="pi pi-times" />
+                    <p:spacer width="10" />
+                    <h:outputText value="#{energyLabelManager.selectedEnergyLabel.editStatus}" />
+
                 </p:toolbarGroup>
 
                 <p:toolbarGroup align="right">
@@ -69,34 +74,51 @@ Email: info@dpbennett.com.jm
                        dynamic="true"
                        style="margin-top: 1px;margin-bottom: 1px;"
                        widgetVar="labelFormTabVar" >
+
+                <p:ajax event="tabChange" 
+                        update=":labelForm:labelFormTabView"
+                        process="@form" /> 
+
                 <p:tab title="General">
                     <h:panelGrid columns="2" cellspacing="10">
-                        <h:outputLabel value="Job number" for="jobNumber" />        
-                        <p:inputText value="#{energyLabelManager.selectedEnergyLabel.jobNumber}"
+                        <h:outputLabel value="Job number *" for="jobNumber" 
+                                       style="font-weight: bold;" />        
+                        <p:inputText value="#{energyLabelManager.selectedEnergyLabel.jobNumber}"                                    
                                      id="jobNumber" >
 
-                            <p:ajax event="change"                
+                            <f:validator validatorId="requiredFieldValidator" />
+
+                            <p:ajax event="change"    
+                                    update=":labelForm"
                                     listener="#{energyLabelManager.updateEnergyLabel}"
                                     process="@this"/>
 
                         </p:inputText>
 
-                        <h:outputLabel value="Brand" for="brand" />        
+                        <h:outputLabel value="Brand *" for="brand" 
+                                       style="font-weight: bold;" />        
                         <p:inputText value="#{energyLabelManager.selectedEnergyLabel.brand}"
                                      id="brand" >
 
+                            <f:validator validatorId="requiredFieldValidator" />
+
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
                         </p:inputText>
 
-                        <h:outputLabel value="Model" for="model" />        
+                        <h:outputLabel value="Model *" for="model" 
+                                       style="font-weight: bold;" />        
                         <p:inputText value="#{energyLabelManager.selectedEnergyLabel.model}"
                                      id="model" >
 
+                            <f:validator validatorId="requiredFieldValidator" />
+
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
                         </p:inputText>
@@ -107,41 +129,55 @@ Email: info@dpbennett.com.jm
 
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
                         </p:inputText>
 
-                        <h:outputLabel value="Distributor" for="distributor" />        
+                        <h:outputLabel value="Distributor *" for="distributor" 
+                                       style="font-weight: bold;" />        
                         <p:inputText value="#{energyLabelManager.selectedEnergyLabel.distributor}"
                                      id="distributor" >
 
+                            <f:validator validatorId="requiredFieldValidator" />
+
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
                         </p:inputText>
 
-                        <h:outputLabel value="Manufacturer" for="manufacturer" />        
+                        <h:outputLabel value="Manufacturer *" for="manufacturer" 
+                                       style="font-weight: bold;" />        
                         <p:inputText value="#{energyLabelManager.selectedEnergyLabel.manufacturer}"
                                      id="manufacturer" >
 
+                            <f:validator validatorId="requiredFieldValidator" />
+
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
                         </p:inputText>
 
-                        <h:outputLabel value="Country" for="country" />        
+                        <h:outputLabel value="Country *" for="country" 
+                                       style="font-weight: bold;" />        
                         <p:inputText value="#{energyLabelManager.selectedEnergyLabel.country}"
                                      id="country" >
 
+                            <f:validator validatorId="requiredFieldValidator" />
+
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
                         </p:inputText>
                     </h:panelGrid>                    
                 </p:tab>
+
                 <p:tab title="Description &amp; Features">
                     <h:panelGrid columns="2" cellspacing="10">
                         <h:outputLabel value="Product type" 
@@ -156,6 +192,7 @@ Email: info@dpbennett.com.jm
                                             itemLabel="#{productType}"/>
 
                             <p:ajax listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
                         </p:selectOneMenu>
@@ -172,6 +209,7 @@ Email: info@dpbennett.com.jm
                                             itemLabel="#{defrost}"/>
 
                             <p:ajax listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
                         </p:selectOneMenu>
@@ -188,6 +226,7 @@ Email: info@dpbennett.com.jm
                                             itemLabel="#{feature1}"/>
 
                             <p:ajax listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
                         </p:selectOneMenu>
@@ -204,6 +243,7 @@ Email: info@dpbennett.com.jm
                                             itemLabel="#{feature2}"/>
 
                             <p:ajax listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
                         </p:selectOneMenu>
@@ -212,15 +252,15 @@ Email: info@dpbennett.com.jm
                 <p:tab title="Specification &amp; Rating">
                     <h:panelGrid columns="2" cellspacing="10">
                         <h:outputLabel value="Capacity (litres)" for="capacity" />        
-                        <p:inputNumber value="#{energyLabelManager.selectedEnergyLabel.capacity}"
-                                       decimalPlaces="3" 
-                                       id="capacity" >
+                        <p:inputText value="#{energyLabelManager.selectedEnergyLabel.capacity}"
+                                     id="capacity" >
 
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
-                        </p:inputNumber>
+                        </p:inputText>
 
                         <h:outputLabel value="Rated voltage (V)" 
                                        for="ratedVoltage"/>
@@ -233,21 +273,22 @@ Email: info@dpbennett.com.jm
                                             itemLabel="#{ratedVoltage}"/>
 
                             <p:ajax listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
                         </p:selectOneMenu>
 
                         <h:outputLabel value="Rated current (A)" 
                                        for="ratedCurrent" />        
-                        <p:inputNumber value="#{energyLabelManager.selectedEnergyLabel.ratedCurrent}"
-                                       decimalPlaces="3" 
-                                       id="ratedCurrent" >
+                        <p:inputText value="#{energyLabelManager.selectedEnergyLabel.ratedCurrent}"
+                                     id="ratedCurrent" >
 
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
-                        </p:inputNumber>
+                        </p:inputText>
 
                         <h:outputLabel value="Rated frequency (Hz)" 
                                        for="ratedFrequency"/>
@@ -260,6 +301,7 @@ Email: info@dpbennett.com.jm
                                             itemLabel="#{ratedFrequency}"/>
 
                             <p:ajax listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
                         </p:selectOneMenu>                        
@@ -278,98 +320,115 @@ Email: info@dpbennett.com.jm
                                             itemLabel="#{letterRating}"/>
 
                             <p:ajax listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
                         </p:selectOneMenu>
 
                         <h:outputLabel value="Efficiency ratio" for="efficiencyRatio" />        
-                        <p:inputNumber value="#{energyLabelManager.selectedEnergyLabel.efficiencyRatio}"
-                                       decimalPlaces="1" 
-                                       id="efficiencyRatio" >
+                        <p:inputText value="#{energyLabelManager.selectedEnergyLabel.efficiencyRatio}"
+                                     id="efficiencyRatio" >
 
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
-                        </p:inputNumber>
+                        </p:inputText>
 
                         <h:outputLabel value="Operating cost ($/yr)" 
                                        for="operatingCost" />        
-                        <p:inputNumber value="#{energyLabelManager.selectedEnergyLabel.operatingCost}"
-                                       decimalPlaces="0" 
-                                       id="operatingCost" >
+                        <p:inputText value="#{energyLabelManager.selectedEnergyLabel.operatingCost}"
+                                     id="operatingCost" >
 
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
-                        </p:inputNumber>
+                        </p:inputText>
 
                         <h:outputLabel value="Annual consumption (kwh/yr)" 
                                        for="annualConsumption" />        
-                        <p:inputNumber value="#{energyLabelManager.selectedEnergyLabel.annualConsumption}"
-                                       decimalPlaces="0" 
-                                       id="annualConsumption" >
+                        <p:inputText value="#{energyLabelManager.selectedEnergyLabel.annualConsumption}"
+                                     id="annualConsumption" >
 
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
-                        </p:inputNumber>
+                        </p:inputText>
 
                         <h:outputLabel value="Electricity Rate 1 ($/kwh)" 
                                        for="costPerKwh" />        
-                        <p:inputNumber value="#{energyLabelManager.selectedEnergyLabel.costPerKwh}"
-                                       decimalPlaces="0" 
-                                       id="costPerKwh" >
+                        <p:inputText value="#{energyLabelManager.selectedEnergyLabel.costPerKwh}"
+                                     id="costPerKwh" >
 
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
-                        </p:inputNumber>
+                        </p:inputText>
 
                         <h:outputLabel value="Electricity Rate 2 ($/kwh)" 
                                        for="costPerKwh2" />        
-                        <p:inputNumber value="#{energyLabelManager.selectedEnergyLabel.costPerKwh2}"
-                                       decimalPlaces="0" 
-                                       id="costPerKwh2" >
+                        <p:inputText value="#{energyLabelManager.selectedEnergyLabel.costPerKwh2}"
+                                     id="costPerKwh2" >
 
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
-                        </p:inputNumber>
+                        </p:inputText>
 
                         <h:outputLabel value="Year of evaluation" 
                                        for="yearOfEvaluation" />        
-                        <p:inputNumber value="#{energyLabelManager.selectedEnergyLabel.yearOfEvaluation}"
-                                       decimalPlaces="0" 
-                                       decimalSeparator="none"
-                                       id="yearOfEvaluation" >
+                        <p:inputText value="#{energyLabelManager.selectedEnergyLabel.yearOfEvaluation}"
+                                     id="yearOfEvaluation" >
 
                             <p:ajax event="change"                
                                     listener="#{energyLabelManager.updateEnergyLabel}"
+                                    update=":labelForm"
                                     process="@this"/>
 
-                        </p:inputNumber>
+                        </p:inputText>
                     </h:panelGrid>
-                </p:tab>                
+                </p:tab>   
+                <p:tab title="Preview">
+                    <div class="card" style="text-align: center;">
+                        <p:graphicImage 
+                            id="labelImage"
+                            value="#{energyLabelManager.energyLabelImagePreview}" 
+                            width="100%" 
+                            stream="false" />
+                    </div>
+                </p:tab>
             </p:tabView>
             <p:toolbar>
                 <p:toolbarGroup align="left">
-                    <p:commandButton value="Ok"
-                                     actionListener="#{energyLabelManager.okLabel}"
-                                     update="label_growl"                             
+                    <p:commandButton value="Save"
+                                     actionListener="#{energyLabelManager.saveEnergyLabel}"
+                                     update=":labelForm"     
+                                     process="@form"
                                      icon="pi pi-check"/>
+
                     <p:spacer width="10"/>
-                    <p:commandButton value="Cancel"
+
+                    <p:commandButton value="Close"
                                      immediate="true" 
                                      actionListener="#{energyLabelManager.cancelLabelEdit}"
                                      icon="pi pi-times" />
                 </p:toolbarGroup>
 
                 <p:toolbarGroup align="right">
+
+                    <h:outputText value="* Fields with bold labels are required to be filled out." 
+                                  style="font-weight: bold;" /> 
+
+                    <p:spacer width="10"/>
 
                     <p:commandButton value="Export"
                                      title="Export energy label image"
