--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -166,8 +166,8 @@ Email: info@dpbennett.com.jm
                                                     <ui:include src="label/labelsTab.xhtml" /> 
                                                 </h:panelGroup> 
 
-                                                <h:panelGroup rendered="#{t.id == 'System Administration'}" >
-                                                    <ui:include src="admin/generalAdminTab.xhtml" /> 
+                                                <h:panelGroup rendered="#{t.id == 'System'}" >
+                                                    <ui:include src="label/systemOptionsTab.xhtml" /> 
                                                 </h:panelGroup>  
 
                                                 <h:panelGroup rendered="#{t.id == 'Clients'}" >
