--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -165,6 +165,10 @@ Email: info@dpbennett.com.jm
                                                 <h:panelGroup rendered="#{t.id == 'Label Browser'}" >
                                                     <ui:include src="label/labelsTab.xhtml" /> 
                                                 </h:panelGroup> 
+                                                
+                                                <h:panelGroup rendered="#{t.id == 'Compliance'}" >
+                                                    <ui:include src="label/complianceOptionsTab.xhtml" /> 
+                                                </h:panelGroup>
 
                                                 <h:panelGroup rendered="#{t.id == 'System'}" >
                                                     <ui:include src="label/systemOptionsTab.xhtml" /> 
