--- a/src/main/webapp/label/systemOptionsTab.xhtml
+++ b/src/main/webapp/label/systemOptionsTab.xhtml
@@ -76,8 +76,8 @@ Email: info@dpbennett.com.jm
             </p:cellEditor>                                           
         </p:column>   
 
-        <p:column>
-            <f:facet name="header">
+        <p:column rendered="#{systemManager.user.can('BeSuperUser')}">
+            <f:facet name="header" >
                 <p:outputLabel value="Name"/>
             </f:facet>
             <p:cellEditor>
@@ -102,7 +102,7 @@ Email: info@dpbennett.com.jm
                     <p:inputText value="#{systemOption.optionValue}" style="width:96%"/>
                 </f:facet>
             </p:cellEditor>                                         
-        </p:column>   
+        </p:column>    
 
         <p:column>
             <p:commandButton title="View or edit system option"   
