--- a/src/main/webapp/label/complianceOptionsTab.xhtml
+++ b/src/main/webapp/label/complianceOptionsTab.xhtml
@@ -64,7 +64,7 @@ Email: info@dpbennett.com.jm
                  value="#{systemManager.foundSystemOptionsByCategory}">
 
         <f:facet name="header">
-            Compliance Setting
+            Compliance Settings
         </f:facet>
 
         <p:column>
