--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -169,6 +169,14 @@ Email: info@dpbennett.com.jm
                                                 <h:panelGroup rendered="#{t.id == 'Compliance'}" >
                                                     <ui:include src="label/complianceOptionsTab.xhtml" /> 
                                                 </h:panelGroup>
+                                                
+                                                <h:panelGroup rendered="#{t.id == 'Energy Efficiency'}" >
+                                                    <ui:include src="label/energyEfficiencyOptionsTab.xhtml" /> 
+                                                </h:panelGroup>
+                                                
+                                                <h:panelGroup rendered="#{t.id == 'LabelPrint'}" >
+                                                    <ui:include src="label/labelPrintOptionsTab.xhtml" /> 
+                                                </h:panelGroup>
 
                                                 <h:panelGroup rendered="#{t.id == 'System'}" >
                                                     <ui:include src="label/systemOptionsTab.xhtml" /> 
