--- a/src/main/webapp/label/energyEfficiencyOptionsTab.xhtml
+++ b/src/main/webapp/label/energyEfficiencyOptionsTab.xhtml
@@ -29,14 +29,14 @@ Email: info@dpbennett.com.jm
         <p:toolbarGroup align="left" >   
             <p:commandButton title="Add new setting"                                  
                              value="New"
-                             actionListener="#{systemManager.createNewSystemOption('Compliance')}"                                                     
+                             actionListener="#{systemManager.createNewSystemOption('Energy Efficiency')}"                                                     
                              global="true"
                              process="@this"
                              icon="pi pi-plus" >
 
                 <p:ajax event="dialogReturn" 
-                        listener="#{systemManager.doSystemOptionSearch('Compliance')}"
-                        update=":appForm:mainTabView:complianceOptionsTable"/>
+                        listener="#{systemManager.doSystemOptionSearch('Energy Efficiency')}"
+                        update=":appForm:mainTabView:energyEfficiencyOptionsTable"/>
 
             </p:commandButton>
             <p:spacer width="20" />
@@ -45,14 +45,14 @@ Email: info@dpbennett.com.jm
 
                 <p:ajax event="keyup"
                         global="false"
-                        update=":appForm:mainTabView:complianceOptionsTable"
-                        listener="#{systemManager.doSystemOptionSearch('Compliance')}"
+                        update=":appForm:mainTabView:energyEfficiencyOptionsTable"
+                        listener="#{systemManager.doSystemOptionSearch('Energy Efficiency')}"
                         process="@this"/>
 
             </p:inputText>
         </p:toolbarGroup>
     </p:toolbar>    
-    <p:dataTable id="complianceOptionsTable"                                       
+    <p:dataTable id="energyEfficiencyOptionsTable"                                       
                  var="systemOption"     
                  editable="false" 
                  editMode="cell"
@@ -64,7 +64,7 @@ Email: info@dpbennett.com.jm
                  value="#{systemManager.foundSystemOptionsByCategory}">
 
         <f:facet name="header">
-            Compliance Settings
+            Energy Efficiency Settings
         </f:facet>
 
         <p:column>
@@ -120,8 +120,8 @@ Email: info@dpbennett.com.jm
                                              target="#{systemManager.selectedSystemOption}" />
 
                 <p:ajax event="dialogReturn"
-                        listener="#{systemManager.doSystemOptionSearch('Compliance')}"
-                        update=":appForm:mainTabView:complianceOptionsTable"/>
+                        listener="#{systemManager.doSystemOptionSearch('Energy Efficiency')}"
+                        update=":appForm:mainTabView:energyEfficiencyOptionsTable"/>
 
             </p:commandButton>           
         </p:column>
