--- a/src/main/webapp/menubar.xhtml
+++ b/src/main/webapp/menubar.xhtml
@@ -30,21 +30,21 @@ Email: info@dpbennett.com.jm
                    rendered="#{systemManager.user.hasModule('energyLabelManager')}"
                    icon="pi pi-cog" >
             <p:menuitem 
-                actionListener="#{systemManager.mainTabView.openTab('Compliance')}" 
+                actionListener="#{energyLabelManager.openComplianceSettingsTab}" 
                 title="Show compliance settings" 
-                rendered="#{systemManager.user.hasModule('energyLabelManager')}"
+                rendered="#{energyLabelManager.user.can('AccessComplianceOptions')}"
                 value="Compliance" 
                 icon="pi pi-check-square" />
             <p:menuitem 
-                actionListener="#{systemManager.mainTabView.openTab('Energy Efficiency')}" 
+                actionListener="#{energyLabelManager.openEnergyEfficiencySettingsTab}" 
                 title="Show energy efficiency settings" 
-                rendered="#{systemManager.user.hasModule('energyLabelManager')}"
+                rendered="#{energyLabelManager.user.can('AccessEnergyEfficiencyOptions')}"
                 value="Energy Efficiency" 
                 icon="pi pi-sun" />
             <p:menuitem 
-                actionListener="#{systemManager.mainTabView.openTab('LabelPrint')}" 
+                actionListener="#{energyLabelManager.openLabelPrintSettingsTab}" 
                 title="Show LabelPrint settings" 
-                rendered="#{systemManager.user.hasModule('energyLabelManager')}"
+                rendered="#{energyLabelManager.user.can('AccessLabelPrintOptions')}"
                 value="LabelPrint" 
                 icon="pi pi-file" />
             <p:menuitem 
