--- a/src/main/webapp/dashboard/label/adminToolbar.xhtml
+++ b/src/main/webapp/dashboard/label/adminToolbar.xhtml
@@ -75,21 +75,25 @@ Email: info@dpbennett.com.jm
                             actionListener="#{energyLabelManager.openEnergyLabelBrowser}" 
                             process="@this" />  
 
-                <p:separator />
+                <ui:remove>
 
-                <p:menuitem value="Client Management"
-                            title="Open the Clients tab"
-                            icon="pi pi-users"
-                            actionListener="#{energyLabelManager.openClientsTab}" 
-                            process="@this" />
+                    <p:separator />
 
-                <p:separator />
+                    <p:menuitem value="Client Management"
+                                title="Open the Clients tab"
+                                icon="pi pi-users"
+                                actionListener="#{energyLabelManager.openClientsTab}" 
+                                process="@this" />
 
-                <p:menuitem value="Reports"
-                            title="Open the Reports tab"
-                            icon="pi pi-file-o"
-                            actionListener="#{energyLabelManager.openReportsTab}"
-                            process="@this" />
+                    <p:separator />
+
+                    <p:menuitem value="Reports"
+                                title="Open the Reports tab"
+                                icon="pi pi-file-o"
+                                actionListener="#{energyLabelManager.openReportsTab}"
+                                process="@this" />
+
+                </ui:remove>
 
             </p:tieredMenu>         
         </p:toolbarGroup>
