--- a/src/main/webapp/label/systemOptionsTab.xhtml
+++ b/src/main/webapp/label/systemOptionsTab.xhtml
@@ -96,7 +96,7 @@ Email: info@dpbennett.com.jm
             </f:facet>
             <p:cellEditor>
                 <f:facet name="output"> 
-                    <p:outputLabel value="#{systemOption.optionValue}" />
+                    <p:outputLabel value="#{systemOption.optionValueDisplay}" />
                 </f:facet>
                 <f:facet name="input">
                     <p:inputText value="#{systemOption.optionValue}" style="width:96%"/>
