--- a/src/main/webapp/label/labelDialog.xhtml
+++ b/src/main/webapp/label/labelDialog.xhtml
@@ -75,7 +75,9 @@ Email: info@dpbennett.com.jm
                        style="margin-top: 1px;margin-bottom: 1px;"
                        widgetVar="labelFormTabVar" >
 
-                <p:ajax event="tabChange" global="false" /> 
+                <p:ajax event="tabChange" global="false" 
+                        update=":labelForm"
+                        listener="#{energyLabelManager.onLabelDialogTabChange}"/> 
 
                 <p:tab title="General">
                     <h:panelGrid columns="2" cellspacing="10">
